Implement common publications, destinations and theses

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: People
   link: /people/
+- name: Publications
+  link: /publications/
 - name: Internships
   link: /internships/
   dropdown:
