Add internship projects (call September 2023)

--- a/_data/people/0_people_cs.yml
+++ b/_data/people/0_people_cs.yml
@@ -21,6 +21,11 @@
       place: Trento, Italy
   email: l.cristiano@fbk.eu
 
+- id: PietroDeMatteis
+  name: Pietro
+  surname: De Matteis
+  email: pietro.dematteis@dedagroup.it
+
 - id: SilvioRanise
   name: Silvio
   surname: Ranise
