--- a/_data/units.yml
+++ b/_data/units.yml
@@ -22,3 +22,10 @@
   head: RobertoCarbone
   website: https://st.fbk.eu
   visible: true
+
+# Other organizations (for internship projects)
+- id: CIL_DG
+  name: Co-Innovation Lab
+  acronym: Co-Innovation Lab
+  website: https://www.deda.group/deda/innovazione/co-innovation-lab
+  visible: false
