--- a/_data/people/1_people_rising.yml
+++ b/_data/people/1_people_rising.yml
@@ -104,7 +104,7 @@
   email: mfranzil@fbk.eu
   phone: "+390461314046"
   affiliations:
-    - role: Junior Researcher
+    - role: Researcher
       unit: Robust and Secure Distributed Computing
       institution: Fondazione Bruno Kessler
       place: Trento, Italy
@@ -199,7 +199,14 @@
   name: Marco
   surname: Zani
   usernameFBK: mzani
-  
+  email: mzani@fbk.eu
+
+- id: GiovanniFoletto
+  name: Giovanni
+  surname: Foletto
+  usernameFBK: gfoletto
+  email: gfoletto@fbk.eu
+
 # Former
 - id: FrancescoTomasselli
   name: Francesco
@@ -495,7 +502,7 @@
   surname: Andres
 
 - id: BehnamShariati
-  name:  Behnam
+  name: Behnam
   surname: Shariati
 
 - id: Bogdan-MihaiAndrus
@@ -995,8 +1002,8 @@
   surname: Rodríguez
 
 - id: JoseManuelRivas-Moscoso
-  name:  Jose
-  surname: Manuel Rivas-Moscoso
+  name: Jose Manuel
+  surname: Rivas-Moscoso
 
 - id: JoseSanchez
   name:  José
