--- a/_data/units.yml
+++ b/_data/units.yml
@@ -25,7 +25,7 @@
 
 # Other organizations (for internship projects)
 - id: CIL_DG
-  name: Co-Innovation Lab
-  acronym: Co-Innovation Lab
+  name: CLEANSE Joint Lab
+  acronym: CLEANSE
   website: https://www.deda.group/deda/innovazione/co-innovation-lab
   visible: false
