--- a/_data/people/1_people_rising.yml
+++ b/_data/people/1_people_rising.yml
@@ -39,7 +39,7 @@
   email: cfacchinetti@fbk.eu
   phone: "+390461314940"
   affiliations:
-    - role: Junior Researcher
+    - role: Researcher
       unit: Robust and Secure Distributed Computing
       institution: Fondazione Bruno Kessler
       place: Trento, Italy
@@ -82,6 +82,7 @@
   name: Luis Augusto
   surname: Dias Knob
   email: l.diasknob@fbk.eu
+  iris_id: rp17578 
   affiliations:
     - role: Researcher
       unit: Robust and Secure Distributed Computing
@@ -103,6 +104,7 @@
   surname: Franzil
   email: mfranzil@fbk.eu
   phone: "+390461314046"
+  iris_id: rp24846
   affiliations:
     - role: Researcher
       unit: Robust and Secure Distributed Computing
@@ -502,7 +504,7 @@
   surname: Andres
 
 - id: BehnamShariati
-  name:  Behnam
+  name: Behnam
   surname: Shariati
 
 - id: Bogdan-MihaiAndrus
@@ -682,7 +684,7 @@
   surname: Altman
 
 - id: ElioSalvadori
-  name: Elio
+  name:  Elio
   surname: Salvadori
 
 - id: F.Cugini
@@ -1002,8 +1004,8 @@
   surname: Rodríguez
 
 - id: JoseManuelRivas-Moscoso
-  name:  Jose
-  surname: Manuel Rivas-Moscoso
+  name: Jose Manuel
+  surname: Rivas-Moscoso
 
 - id: JoseSanchez
   name:  José
@@ -1092,6 +1094,10 @@
 - id: LucaCapra
   name:  Luca
   surname: Capra
+
+- id: LucaMendozzi
+  name:  Luca
+  surname: Mendozzi
 
 - id: LucaMottola
   name:  Luca
