--- a/_data/people/1_people_rising.yml
+++ b/_data/people/1_people_rising.yml
@@ -209,6 +209,30 @@
   usernameFBK: gfoletto
   email: gfoletto@fbk.eu
 
+- id: LorysMutti
+  name: Lorys
+  surname: Mutti
+  usernameFBK: lmutti
+  email: lmutti@fbk.eu
+
+- id: CarloSorrentino
+  name: Carlo
+  surname: Sorrentino
+  usernameFBK: csorrentino
+  email: csorrentino@fbk.eu
+
+- id: SilvanusBordignon
+  name: Silvanus
+  surname: Bordignon
+  usernameFBK: sbordignon
+  email: sbordignon@fbk.eu
+
+- id: MatteoBregola
+  name: Matteo
+  surname: Bregola
+  usernameFBK: mbregola
+  email: mbregola@fbk.eu
+
 # Former
 - id: FrancescoTomasselli
   name: Francesco
@@ -434,6 +458,10 @@
 - id: AliSamanTosun
   name:  Ali Saman
   surname: Tosun
+
+- id: AmbrishRawat
+  name:  Ambrish
+  surname: Rawat
 
 - id: AmyL.Murphy
   name:  Amy L.
@@ -1179,6 +1207,10 @@
   name:  Marianna
   surname: Angelou
 
+- id: MarkPurcell
+  name:  Mark
+  surname: Purcell
+
 - id: MartenssonJonas
   name:  Mårtensson
   surname: Jonas
@@ -1514,6 +1546,10 @@
 - id: StefanGuna
   name:  Stefan
   surname: Gună
+
+- id: StefanoBraghin
+  name:  Stefano
+  surname: Braghin
 
 - id: StephaneJunique
   name:  Stéphane
