Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/3e537d1180243d7ee10cbf46385fd3e48b057e5b

--- a/_data/publications/publications_aleph.yml
+++ b/_data/publications/publications_aleph.yml
@@ -10,7 +10,7 @@
 #     -                       # ... (remember that tags should exist in "_data/tags.yml")
 #   abstract: >               # Abstract (optional)
 #     textual abstract    
-#   destination:              # Unique ID of the destination (see below)
+#   destination:              # Unique ID of the destination (remember that destinations should exist in "_data/destinations.yml")
 #   destinationAddon:         # Addon to the destination journal or proceedings (e.g., volume, pages) (optional)
 #   isALEPH:                  # Whether the publication should appear in all pages including the list of publications of ALEPH (then, set to "true") or in all pages excluding the list of publications of ALEPH (then, set to "false")
 #   year:               # year of publication (e.g., 2023)
@@ -190,6 +190,51 @@
   - DecentralizationOfTrust
 
 ## 2024
+- id: ICIN2024MOMO
+  id_iris: 346387
+  title: "Multi-Objective Microservice Orchestration: Balancing Security and Performance in CCAM"
+  authors:
+    - StefanoBerlato
+    - SilvioCretti
+    - DomenicoSiracusa
+    - SilvioRanise
+  tags:
+    - CAC
+    - CloudComputing
+    - PrivacyEnhancingCryptography
+  abstract: >               # Abstract (optional)
+    We (devise and) demonstrate the benefits of a methodology and a toolset for orchestrating Cloud-native applications to balance the minimization of risks due to the presence of security threats and the achievement of service performance requirements — expressed on, e.g., computational resources, network throughput and latency. The demo proves the effectiveness of the methodology in orchestrating a set of microservices implementing a prominent Cooperative, Connected and Automated Mobility (CCAM) service.    
+  destination: ICIN2024
+  isALEPH: true
+  year: 2024
+  doi: 10.1109/ICIN60470.2024.10494482
+
+- id: JMC 2024 MarcoCalderini
+  title: Searchable encryption with randomized ciphertext and randomized keyword search
+  authors:
+  - MarcoCalderini
+  - RiccardoLongo
+  - MassimilianoSala
+  - IreneVilla
+  destination: JMC
+  year: 2024
+  doi: 10.1515/jmc-2023-0029
+  isALEPH: false
+  abstract: "<jats:title>Abstract</jats:title>\n               <jats:p>The notion\
+    \ of public-key encryption with keyword search (PEKS) was introduced to search\
+    \ over encrypted data without performing any decryption. In this article, we propose\
+    \ a PEKS scheme in which both the encrypted keyword and the trapdoor are randomized\
+    \ so that the cloud server is not able to recognize identical queries <jats:italic>a\
+    \ priori</jats:italic>. Our scheme is <jats:italic>Ciphertext-Indistinguishabiltity</jats:italic>\
+    \ secure in the single-user setting and <jats:italic>Trapdoor-Indistinguishability</jats:italic>\
+    \ secure in the multi-user setting with a stronger security, i.e., with <jats:italic>multi-trapdoor</jats:italic>.</jats:p>"
+  destinationAddon: Volume 18, Issue 1
+  tags:
+  - CAC
+  - CloudComputing
+  - PrivacyEnhancingCryptography
+
+## 2025
 # ...
 
 # PLEASE KEEP ALPHABETICAL ORDER BY ID WITHIN YEARS
