--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Center for Cybersecurity
 tagline: Research Center in Fondazione Bruno Kessler (FBK)
 logo: /assets/images/logos/CS.png
-remote_theme: chrisrhymes/bulma-clean-theme
+remote_theme: chrisrhymes/bulma-clean-theme@v0.13.3
 markdown: kramdown
 repository: csfbk/csfbk.github.io
 
