Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/0cb308afcc7deefdc22c4e306b8520e8c08f2438

--- a/_data/members/members_aleph.yml
+++ b/_data/members/members_aleph.yml
@@ -7,6 +7,7 @@ current:
     - RiccardoLongo
     - ZahraEbadiAnsaroudi
     - MarioScuro
+    - EnricoSorbera
 
   collaborators:
     # -   # ID of the person
@@ -51,6 +52,13 @@ current:
       type:           M
       topic:          Key Recovery
       institution:    University of Trento
+      yearFrom:       2024
+      # yearTo:         2024
+
+    - personId:       ValeriaVicard
+      type:           M
+      topic:          Pairin based Cryptography for Searchable and Attribute-based Encryption
+      institution:    University of Udine
       yearFrom:       2024
       # yearTo:         2024
 
