Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/49b28b9d4e4b132ac60d9983a7bdab181547f16f

--- a/_data/people/1_people_aleph.yml
+++ b/_data/people/1_people_aleph.yml
@@ -82,6 +82,16 @@
       place: Trento, Italy
   email: chiara.spadafora@unitn.it
 
+- id: EnricoSorbera
+  name: Enrico
+  surname: Sorbera
+  affiliations:
+    - role: Research Assistant
+      unit: Applied Cryptography
+      institution: Fondazione Bruno Kessler
+      place: Trento, Italy
+  email: esorbera@fbk.eu
+
 - id: FrancescoAntonioMarino
   name: Francesco Antonio
   surname: Marino
@@ -142,10 +152,9 @@
   name: Marco
   surname: Centenaro
 
-- id: MarcoSoldera
+- id: MarcoSoldera_BA
   name: Marco
   surname: Soldera
-  email: msoldera@fbk.eu
 
 - id: MarianoCeccato
   name: Mariano
