--- a/_data/destinations/destinations_st.yml
+++ b/_data/destinations/destinations_st.yml
@@ -22,6 +22,11 @@
   url: https://www.sciencedirect.com/journal/information-and-computation
   type: journal
 
+- id: IEEE_SP
+  name: IEEE Security & Privacy
+  url: https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8013
+  type: journal
+
 - id: IJFCS
   name: International Journal of Foundations of Computer Science
   url: https://www.worldscientific.com/worldscinet/ijfcs
@@ -1026,7 +1031,7 @@
 - id: ARES2023
   name: 18th International Conference on Availability, Reliability and Security
   acronym: ARES 2023
-  url: https://www.ares-conference.eu
+  url: https://2023.ares-conference.eu/
   type: conference
   location: Benevento, Italy
   startDate: "2023-08-29"
@@ -1042,8 +1047,8 @@
   startDate: "2022-07-19"
   endDate: "2022-07-21"
 
-- id: ECML/PKDD2023_PP
-  name: ECML/PKDD 2023 Post-Workshops and Tutorials Proceedings
+- id: ECML/PKDD2023_WP
+  name: Machine Learning and Principles and Practice of Knowledge Discovery in Databases
   url: https://2023.ecmlpkdd.org/
   type: post-proceedings
 
@@ -1116,7 +1121,7 @@
   acronym: Ital-IA 2024
   url: https://ital-ia2024.it/
   type: conference
-  location: Napoli, Italy
+  location: Naples, Italy
   startDate: "2024-05-29"
   endDate: "2024-05-30"
 
