Update RiSING head of unit, remove former member page

--- a/_data/units.yml
+++ b/_data/units.yml
@@ -11,7 +11,7 @@
   name: Robust and Secure Distributed Computing
   acronym: RiSING
   logo: RiSING_symbol.png
-  head: DomenicoSiracusa
+  head: SilvioRanise
   website: https://rising.fbk.eu
   visible: true
 
