Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/85603e8f95a7c494d6df2f82e1dc39000bebb5b1

--- a/_data/members/members_aleph.yml
+++ b/_data/members/members_aleph.yml
@@ -11,6 +11,7 @@ current:
     - RiccardoLongo
     - ZahraEbadiAnsaroudi
     - MarioScuro
+    - GiacomoBrandi
     - EnricoSorbera
 
   collaborators:
@@ -27,13 +28,6 @@ current:
     - personId:       GiorgiaGabardi
       type:           B
       topic:          Cryptographic Revocation
-      institution:    University of Trento
-      yearFrom:       2024
-      # yearTo:         2023
-
-    - personId:       LucaClaus
-      type:           B
-      topic:          Cryptographic Access Control for Blockchain-based Applications
       institution:    University of Trento
       yearFrom:       2024
       # yearTo:         2023
@@ -106,6 +100,9 @@ former:
 
     - personId: IonAndyDitu_BA
       thesisId: IonAndyDitu_BA
+
+    - personId: LucaClaus_BA
+      thesisId: LucaClaus_BA
 
     - personId: SimoneBrunello_BA
       thesisId: SimoneBrunello_BA
