--- a/_data/internships.yml
+++ b/_data/internships.yml
@@ -1641,7 +1641,8 @@ projects:
   - id: p-2024-st-8
     title: Automatic Security Testing Tool for Identity Management Protocols
     published: "2024-10-18"
-    applicationEnd: "2024-11-18 23:59"
+    applicationEnd: "2025-01-05 23:59"
+    applicationPreviousEnd: "2024-11-18 23:59"
     year: 2024
     description: >
       Identity Management (IdM) protocols are the protocols supporting Single-Sign On (SSO) which is an authentication schema allowing the user to access different services using the same set of credentials. Two of the most known IdM protocols are SAML 2.0 SSO and OAuth 2.0/OpenID Connect. Several solutions for corporations like Google, Meta (Facebook) and for Public Administration like eIDAS and SPID are based on IdM protocols. We propose improving the tool to extend its capabilities by designing and implementing new features.
